# libofono

./: Makefile.am  configure.ac  libofono.pc.in
debian/: changelog  control  libofono-dev.install  libofono.install  rules
src/: Makefile.am  dbus-helpers.c  dbus-helpers.h  log.h  modem.c  modem.h  notifier.c  notifier.h  ofono-conn.c  ofono-conn.h  ofono-manager.c  ofono-manager.h  ofono-modem.c  ofono-modem.h  ofono-net.c  ofono-net.h  ofono-sim.c  ofono-sim.h
