SUBDIRS = src

libofonoinclude_HEADERS = \
	src/modem.h \
	src/log.h \
	src/notifier.h \
	src/ofono-manager.h

libofonoincludedir = $(includedir)/libofono

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libofono.pc

MAINTAINERCLEANFILES = Makefile.in libofono.pc aclocal.m4 config.h.in configure compile config.guess config.sub depcomp install-sh ltmain.sh missing m4/*
